--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
-    "qs": "^6.8.0"
+    "qs": "^6.8.0",
+    "serial-mocha": "^0.0.4"
   }
 }
