--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "mongoose": "^5.6.11",
     "querymen": "^2.1.3"
   },
   "devDependencies": {
     "axios": "^0.19.0",
     "chai": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
     "qs": "^6.8.0",
     "serial-mocha": "^0.0.4"
